# mc_neuron_mocap_plugin

./: .gitignore  CMakeLists.txt  README.md
etc/: mc_neuron_mocap_plugin.in.yaml  mocap_plugin.in.yaml
include/mc_neuron_mocap_plugin/: MoCap.h  MoCapProperties.h
src/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  MoCap.cpp  MoCap.h  ROSSubscriber.h  Socket.cpp  Socket.h  SocketException.h  plugin.cpp  plugin.h
tests/: main.cpp
tests/etc/: mc_rtc.yaml
